--- a/pay_all/Gemfile
+++ b/pay_all/Gemfile
@@ -1,12 +1,10 @@
 source 'https://rubygems.org'
 
-gem 'cancancan', '~> 1.9'
-
-gem 'jquery-datatables-rails', git: 'git://github.com/rweng/jquery-datatables-rails.git'
-
-gem 'jquery-turbolinks'
-
 gem 'bootstrap-sass', '3.2.0.0'
+gem 'faker'
+gem 'pundit'
+
+gem 'jquery-datatables-rails', github: 'rweng/jquery-datatables-rails'
 
 gem 'devise', '3.4.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
