--- a/pay_all_admin/Gemfile
+++ b/pay_all_admin/Gemfile
@@ -1,12 +1,12 @@
 source 'https://rubygems.org'
 
-gem 'jquery-turbolinks'
+
+gem 'ajax-datatables-rails', git: 'git://github.com/antillas21/ajax-datatables-rails.git', branch: 'legacy'
 
 gem 'bootstrap-sass', '3.2.0.0'
-
 gem 'faker'
-
 gem 'pundit'
+
 
 gem 'jquery-datatables-rails', github: 'rweng/jquery-datatables-rails'
 
